Fix spacing errors

--- a/css/main.css
+++ b/css/main.css
@@ -21,49 +21,50 @@ body {
   margin: 0;
 }
 
- header {
-  padding: 0.5rem 0;
+header {
+  padding: .5rem 0;
   background-color: #ccc;
   text-align: center;
- }
+}
 
- h1 {
-   margin: 0 0 .5rem;
-   font-size: 1.5rem;
- }
+h1 {
+  margin: 0 0 .5rem;
+  font-size: 1.5rem;
+}
 
- nav ul {
-   margin: 0;
-   padding: 0;
-   list-style-type: none;
- }
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
 
- nav li {
-   text-align: left;
- }
+nav li {
+  text-align: left;
+}
 
- nav a {
-   display: block;
-   padding: .5em .75em
-   color: #333;
-   text-decoration: none;
- }
+nav a {
+  display: block;
+  padding: .5em .75em;
+  color: #333;
+  text-decoration: none;
+}
 
- nav a:hover {
-   background-color: #333;
-   color: #fff;
- }
+nav a:hover {
+  background-color: #333;
+  color: #fff;
+}
 
- @media only screen and (min-width 25em) {
+@media only screen and (min-width: 25em) {
 
-   nav li {
-     display: inline-block;
-     text-align: center;
-   }
+  nav li {
+    display: inline-block;
+    text-align: center;
+  }
 
 }
 
-@media only screen and (min-width 38em) {
+@media only screen and (min-width: 38em) {
+
   html {
     font-size: 110%;
     line-height: 1.4;
@@ -71,7 +72,8 @@ body {
 
 }
 
-@media only screen and (min-width 60em) {
+@media only screen and (min-width: 60em) {
+
   html {
     font-size: 120%;
     line-height: 1.5;
@@ -96,8 +98,10 @@ body {
 
 }
 
-@media only screen and (min-width 90em) {
+@media only screen and (min-width: 90em) {
+
   html {
     font-size: 130%;
   }
+
 }
